feat: implemented expanding cards UI
Added HTML for cards. Added functionality for card expansion using JS DOM.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,25 @@
       href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>Expanding Cards</title>
   </head>
   <body>
-    <h1>Hi There</h1>
+    <div class="container">
+      <div class="panel panel--1">
+        <h3>Lorem, ipsum dolor.</h3>
+      </div>
+      <div class="panel panel--2">
+        <h3>Lorem ipsum dolor sit amet.</h3>
+      </div>
+      <div class="panel panel--3">
+        <h3>Elit. Error, impedit.</h3>
+      </div>
+      <div class="panel panel--4">
+        <h3>Asperiores necessita neque</h3>
+      </div>
+      <div class="panel panel--5">
+        <h3>Explore the world</h3>
+      </div>
+    </div>
   </body>
 </html>
